--- a/create_customer_ac.html
+++ b/create_customer_ac.html
@@ -65,7 +65,7 @@
 				<div class="col-md-12 col-sm-12 text-center">
 					<span class=" user_icon"><i class="fa fa-user-circle"></i></span>
 					<div class="separator" style="font-size: 24px">CREATE NEW ACCOUNT</div>
-					<form>
+					<form style="margin-top: 15px">
 					  <div class="form-row text-left">
 					    <div class="form-group col-md-6">
 					      <label for="name">Name:*</label>
