--- a/create_customer_ac.html
+++ b/create_customer_ac.html
@@ -69,7 +69,7 @@
 					  <div class="form-row text-left">
 					    <div class="form-group col-md-6">
 					      <label for="name">Name:*</label>
-					      <input type="text" class="form-control" id="name" required style="">
+					      <input type="text" class="form-control" id="name" required>
 					    </div>
 					    <div class="form-group col-md-6">
 					      <label for="surname">Surname:*</label>
@@ -117,7 +117,7 @@
 					    <div class="form-check">
 					      <input class="form-check-input" type="checkbox" id="gridCheck" required>
 					      <label class="form-check-label" for="gridCheck">
-					       <a href="#">I agree to the Terms of Service and Privacy Policy*</a>
+					       <a href="#" class="policy_link">I agree to the Terms of Service and Privacy Policy*</a>
 					      </label>
 					    </div>
 					  </div>
