--- a/LogInpage.html
+++ b/LogInpage.html
@@ -26,7 +26,7 @@
 		      <a class="nav-item mr-auto" href="#">
 					<form class="form-inline">
 		      		<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-		      		<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+		      		<button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="border-radius: 15px !important;">Search</button>
 		    		</form>
 		      </a>
 		      <ul class="navbar-nav mt-2 mt-lg-0">
@@ -112,8 +112,8 @@
 				<!--Main Part - Create new Account Form  -->
 				<div id="create_an_account">
 					<p style="text-align: center; font: Bold 36px/54px Segoe UI; color: #31A13C;">Choose the suitable option for you:</p>
-					<button type="button" class="login-btn2">Customer Account</button>
-					<button type="button" class="login-btn2">Company Account</button>
+					<a href="create_customer_ac.html" type="button" class="login-btn2">Customer Account</a>
+					<a href="create_company_ac.html" type="button" class="login-btn2">Company Account</a>
 				</div>
 			</div>
 		</div>
