--- a/LogInpage.html
+++ b/LogInpage.html
@@ -56,7 +56,7 @@
 		            <a class="nav-link" href="#">About Us</a>
 		         </li>
 		         <li class="nav-item">
-		            <a class="nav-link" href="#">Login</a>
+		            <a class="nav-link" href="LogInpage.html">Login</a>
 		         </li>
 		      </ul>
     		</div>
