--- a/change_company_ac.html
+++ b/change_company_ac.html
@@ -64,16 +64,16 @@
 			<div class="col-md-6 offset-md-3 col-sm-12 main_block">
 				<div class="col-md-12 col-sm-12 text-center">
 					<span class=" user_icon"><i class="fa fa-user-circle"></i></span>
-					<div class="separator" style="font-size: 24px">COMPANY ACCOUNT</div>
+					<div class="separator" style="font-size: 24px">CHANGE YOUR ACCOUNT</div>
 					<form style="margin-top: 15px">
 					  <div class="form-row text-left">
 					    <div class="form-group col-md-6">
-					      <label for="company_name">Company Name:*</label>
-					      <input type="text" class="form-control" id="company_name" required>
+					      <label for="company_name">Company Name:</label>
+					      <input type="text" class="form-control" id="company_name">
 					    </div>
 					    <div class="form-group col-md-6">
-					      <label for="company_id">Company ID:*</label>
-					      <input type="text" class="form-control" id="company_id" required>
+					      <label for="company_id">Company ID:</label>
+					      <input type="text" class="form-control" id="company_id">
 					    </div>
 					    <div class="form-group col-md-6">
 					      <label for="co_fn">Company Owner Firstname:</label>
@@ -84,8 +84,8 @@
 					      <input type="text" class="form-control" id="co_ln">
 					    </div>
 					    <div class="form-group col-md-6">
-					      <label for="person_number">Personal Phone Number:*</label>
-					      <input type="text" class="form-control" id="person_number" required>
+					      <label for="person_number">Personal Phone Number:</label>
+					      <input type="text" class="form-control" id="person_number">
 					    </div>
 						<div class="form-group col-md-6">
 					      <label for="business_phone">Business Phone Number:</label>
@@ -93,17 +93,17 @@
 					    </div>
 					  </div>
 					  <div class="form-group text-left">
-					    <label for="email">Email:*</label>
-					    <input type="email" class="form-control" id="email" required>
+					    <label for="email">Email:</label>
+					    <input type="email" class="form-control" id="email">
 					  </div>
 					  <div class="form-row text-left">
 					    <div class="form-group col-md-6">
-					      <label for="password">Password:*</label>
-					      <input type="text" class="form-control" id="password" required>
+					      <label for="password">Password:</label>
+					      <input type="text" class="form-control" id="password">
 					    </div>
 					    <div class="form-group col-md-6">
-					      <label for="conf_password">Confirm Password:*</label>
-					      <input type="text" class="form-control" id="conf_password" required>
+					      <label for="conf_password">Confirm Password:</label>
+					      <input type="text" class="form-control" id="conf_password">
 					    </div>
 					 </div>
 					 <div class="form-group text-left">
@@ -120,22 +120,11 @@
 					      <input type="text" class="form-control" id="post_code">
 					    </div>
 					 </div>
-					<div class="form-row">
-						<div class="form-group" style="float: left">
-					    <div class="form-check">
-					      <input class="form-check-input" type="checkbox" id="gridCheck" required>
-					      <label class="form-check-label" for="gridCheck">
-					       <a href="#" class="policy_link">I agree to the Terms of Service and Privacy Policy*</a>
-					      </label>
-					    </div>
-					  </div>
-					</div>
 					  <div class="form-row">
 					  		<div class="col-md-6 text-left">
-								<p>* Required fields</p>
 					  		</div>
 							<div class="form-group col-md-6 text-right">
-								<button type="submit" class="btn btn-primary" style="border-radius: 15px; background-color: #31A13C; padding: 7px; width: 120px; font-size: 20px">CREATE</button>
+								<button type="submit" class="btn btn-primary" style="border-radius: 15px; background-color: #31A13C; padding: 7px; width: 120px; font-size: 20px">CHANGE</button>
 							</div>
 					  </div>
 					</form>
