--- a/LogInpage.html
+++ b/LogInpage.html
@@ -50,7 +50,7 @@
         				</div>
       			</li>
 		         <li class="nav-item">
-		            <a class="nav-link" href="#">Customer Service</a>
+		            <a class="nav-link" href="customer_servise_help_page.html">Customer Service</a>
 		         </li>
 		         <li class="nav-item">
 		            <a class="nav-link" href="#">About Us</a>
