--- a/change_company_ac.html
+++ b/change_company_ac.html
@@ -48,13 +48,13 @@
         				</div>
       			</li>
 		         <li class="nav-item">
-		            <a class="nav-link" href="#">Customer Service</a>
+		            <a class="nav-link" href="customer_servise_help_page.html">Customer Service</a>
 		         </li>
 		         <li class="nav-item">
 		            <a class="nav-link" href="#">About Us</a>
 		         </li>
 		         <li class="nav-item">
-		            <a class="nav-link" href="#">Login</a>
+		            <a class="nav-link" href="LogInpage.html">Login</a>
 		         </li>
 		      </ul>
     		</div>
