--- a/customer_servise_help_page.html
+++ b/customer_servise_help_page.html
@@ -64,62 +64,30 @@
 			<div class="col-md-6 offset-md-3 col-sm-12 main_block">
 				<div class="col-md-12 col-sm-12 text-center">
 					<span class=" user_icon"><i class="fa fa-user-circle"></i></span>
-					<div class="separator" style="font-size: 24px">CHANGE YOUR ACCOUNT</div>
-					<form style="margin-top: 15px">
-					  <div class="form-row text-left">
-					    <div class="form-group col-md-6">
-					      <label for="name">Name:</label>
-					      <input type="text" class="form-control" id="name">
-					    </div>
-					    <div class="form-group col-md-6">
-					      <label for="surname">Surname:</label>
-					      <input type="text" class="form-control" id="surname">
-					    </div>
-					    <div class="form-group col-md-6">
-					      <label for="dob">Date of Birth:</label>
-					      <input type="text" class="form-control" id="dob">
-					    </div>
-						<div class="form-group col-md-6">
-					      <label for="phonenum">Phone Number:</label>
-					      <input type="text" class="form-control" id="phonenum">
-					    </div>
+					<div class="separator" style="font-size: 24px">HOW COULD WE HELP YOU?</div>
+
+					<hr style="margin-top: 23px">
+					<p style="text-align: left; font-size: 20px; margin-left: 15px">You can send us a message</p>
+					<hr>
+					<form>
+					  <div class="form-group text-left" style="margin-top: 15px">
+					    <label for="exampleFormControlInput1">Email address</label>
+					    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="How can we contact you (write your email)?">
 					  </div>
-					  <div class="form-group text-left">
-					    <label for="email">Email:</label>
-					    <input type="email" class="form-control" id="email">
 					  </div>
-					  <div class="form-row text-left">
-					    <div class="form-group col-md-6">
-					      <label for="password">Password:</label>
-					      <input type="text" class="form-control" id="password">
-					    </div>
-					    <div class="form-group col-md-6">
-					      <label for="conf_password">Confirm Password:</label>
-					      <input type="text" class="form-control" id="conf_password">
-					    </div>
-					 </div>
-					 <div class="form-group text-left">
-					   <label for="address">Street Address:</label>
-					   <input type="text" class="form-control" id="address">
-					 </div>
-					 <div class="form-row text-left">
-					    <div class="form-group col-md-6">
-					      <label for="city_town">City / Town:</label>
-					      <input type="text" class="form-control" id="city_town">
-					    </div>
-					    <div class="form-group col-md-6">
-					      <label for="post_code">Postal Code:</label>
-					      <input type="text" class="form-control" id="post_code">
-					    </div>
-					 </div>
+					  <div class="form-group" style="margin-left: 14px; margin-right: 14px">
+					    <label for="exampleFormControlTextarea1">Textarea</label>
+					    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Please, write your message here, explain your problem" style="border-radius: 15px !important; border: 1px solid #31A13C !important;"></textarea>
+					  </div>
 					  <div class="form-row">
 					  		<div class="col-md-6 text-left">
 					  		</div>
 							<div class="form-group col-md-6 text-right">
-								<button type="submit" class="btn btn-primary" style="border-radius: 15px; background-color: #31A13C; padding: 7px; width: 120px; font-size: 20px">CHANGE</button>
+								<button type="submit" class="btn btn-primary" style="border-radius: 15px; background-color: #31A13C; padding: 4px; width: 100px; font-size: 20px; margin-right: 14px">SEND</button>
 							</div>
 					  </div>
 					</form>
+
 				</div>
 			</div>
 		</div>
@@ -127,6 +95,33 @@
 	<footer class="page-footer font-small pt-4" style="margin-top: 60px; background-color: #312B2B; margin-left: -15px; margin-right: -15px; color: white">
 	  <div class="container-fluid text-center text-md-left">
 	    <div class="row">
+	      <div class="col-md-5 mt-md-0 mt-3">
+	        <h6 class="text-uppercase">Footer Content</h6>
+	        <p style="font-size: 12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	      </div>
+			<div class="col-md-1"></div>
+	      <hr class="clearfix w-100 d-md-none pb-3">
+	      <div class="col-md-3 mb-md-0 mb-3 col-sm-6">
+	        <h6 class="text-uppercase">Contact Us</h6>
+	        <ul class="list-unstyled" >
+	          <li><a href="#!">Link 1</a></li>
+	          <li><a href="#!">Link 2</a></li>
+	          <li><a href="#!">Link 3</a></li>
+	          <li><a href="#!">Link 4</a></li>
+	        </ul>
+	      </div>
+	      <div class="col-md-3 mb-md-0 mb-3 col-sm-6">
+	        <h6 class="text-uppercase">Policies & Info</h6>
+	        <ul class="list-unstyled">
+	          <li><a href="#!">Link 1</a></li>
+	          <li><a href="#!">Link 2</a></li>
+	          <li><a href="#!">Link 3</a></li>
+	          <li><a href="#!">Link 4</a></li>
+	        </ul>
+	      </div>
+	    </div>
+	  </div>
+	</footer>
 
 	<!--Javascript Links-->
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
