--- a/customer_servise_help_page.html
+++ b/customer_servise_help_page.html
@@ -65,9 +65,55 @@
 				<div class="col-md-12 col-sm-12 text-center">
 					<span class=" user_icon"><i class="fa fa-user-circle"></i></span>
 					<div class="separator" style="font-size: 24px">HOW COULD WE HELP YOU?</div>
-
 					<hr style="margin-top: 23px">
-					<p style="text-align: left; font-size: 20px; margin-left: 15px">You can send us a message</p>
+						<p style="text-align: left; font-size: 20px; margin-left: 15px">Frequently asked questions</p>
+					<hr>
+					<div class="accordion" id="accordionExample">
+						<div class="card" style="border: none">
+						  <div class="card-header" id="headingOne">
+						    <h2 class="mb-0">
+						      <button class="btn btn-link btn-block text-left button_box" type="button" data-toggle="collapse" data-target="#collapseOne" aria-controls="collapseOne">
+						          Question #1
+						       </button>
+						     </h2>
+						  </div>
+						  <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+						     <div class="card-body answer_box">
+						        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+						     </div>
+						    </div>
+						  </div>
+						  <div class="card" style="border: none">
+						    <div class="card-header" id="headingTwo">
+						      <h2 class="mb-0">
+						        <button class="btn btn-link btn-block text-left collapsed button_box" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-controls="collapseTwo">
+						          Question #2
+						        </button>
+						      </h2>
+						    </div>
+						    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+						      <div class="card-body answer_box">
+						        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+						      </div>
+						    </div>
+						  </div>
+						  <div class="card" style="border: none">
+						    <div class="card-header" id="headingThree">
+						      <h2 class="mb-0">
+						        <button class="btn btn-link btn-block text-left collapsed button_box" type="button" data-toggle="collapse" data-target="#collapseThree" aria-controls="collapseThree">
+						          Question #3
+						        </button>
+						      </h2>
+						    </div>
+						    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+						      <div class="card-body answer_box">
+						        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+						      </div>
+						    </div>
+						  </div>
+						</div>
+					<hr style="margin-top: 23px">
+						<p style="text-align: left; font-size: 20px; margin-left: 15px">You can send us a message</p>
 					<hr>
 					<form>
 					  <div class="form-group text-left" style="margin-top: 15px">
