--- a/inf_for_companies.html
+++ b/inf_for_companies.html
@@ -19,8 +19,8 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" style="border-color: green;">
-                <span class="navbar-toggler-icon my-toggler"></span>
-            </button>
+	    	<span class="navbar-toggler-icon my-toggler"></span>
+	    </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <a class="navbar-brand mr-auto" href="#"><span class="vastelogo"><i>#vastepiste</i></span></a>
                 <a class="nav-item mr-auto" href="#">
@@ -64,86 +64,27 @@
                 </ul>
             </div>
         </nav>
-        <!--Registration Form-->
+        <!--Form-->
         <div class="row">
             <div class="col-md-6 offset-md-3 col-sm-12 main_block">
                 <div class="col-md-12 col-sm-12 text-center">
                     <span class=" user_icon"><i class="fa fa-user-circle"></i></span>
-                    <div class="separator" style="font-size: 24px">COMPANY ACCOUNT</div>
-                    <form style="margin-top: 15px">
-                        <div class="form-row text-left">
-                            <div class="form-group col-md-6">
-                                <label for="company_name">Company Name:*</label>
-                                <input type="text" class="form-control" id="company_name" required>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="company_id">Company ID:*</label>
-                                <input type="text" class="form-control" id="company_id" required>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="co_fn">Company Owner Firstname:</label>
-                                <input type="text" class="form-control" id="co_fn">
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="co_ln">Company Owner Lastname:</label>
-                                <input type="text" class="form-control" id="co_ln">
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="person_number">Personal Phone Number:*</label>
-                                <input type="text" class="form-control" id="person_number" required>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="business_phone">Business Phone Number:</label>
-                                <input type="text" class="form-control" id="business_phone">
-                            </div>
-                        </div>
-                        <div class="form-group text-left">
-                            <label for="email">Email:*</label>
-                            <input type="email" class="form-control" id="email" required>
-                        </div>
-                        <div class="form-row text-left">
-                            <div class="form-group col-md-6">
-                                <label for="password">Password:*</label>
-                                <input type="text" class="form-control" id="password" required>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="conf_password">Confirm Password:*</label>
-                                <input type="text" class="form-control" id="conf_password" required>
-                            </div>
-                        </div>
-                        <div class="form-group text-left">
-                            <label for="address">Street Address:</label>
-                            <input type="text" class="form-control" id="address">
-                        </div>
-                        <div class="form-row text-left">
-                            <div class="form-group col-md-6">
-                                <label for="city_town">City / Town:</label>
-                                <input type="text" class="form-control" id="city_town">
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="post_code">Postal Code:</label>
-                                <input type="text" class="form-control" id="post_code">
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group" style="float: left">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="gridCheck" required>
-                                    <label class="form-check-label" for="gridCheck">
-					       <a href="#" class="policy_link">I agree to the Terms of Service and Privacy Policy*</a>
-					      </label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="col-md-6 text-left">
-                                <p>* Required fields</p>
-                            </div>
-                            <div class="form-group col-md-6 text-right">
-                                <button type="submit" class="btn btn-primary" style="border-radius: 15px; background-color: #31A13C; padding: 7px; width: 120px; font-size: 20px">CREATE</button>
-                            </div>
-                        </div>
-                    </form>
+                    <div class="separator" style="font-size: 24px">INFORMATION FOR COMPANIES</div>
+                    <hr style="margin-top: 23px">
+                    <p style="text-align: left; font-size: 20px; margin-left: 15px">Information</p>
+                    <hr>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
                 </div>
             </div>
         </div>
@@ -180,7 +121,6 @@
             </div>
         </footer>
     </div>
-
 
     <!--Javascript Links-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
