--- a/LogInpage.html
+++ b/LogInpage.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-<body class="init">
+<body>
     <!--Top Header-->
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
