--- a/info_for_companies.html
+++ b/info_for_companies.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-<body class="init">
+<body>
     <!--Top Header-->
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
@@ -69,79 +69,23 @@
             <div class="col-md-6 offset-md-3 col-sm-12 main_block">
                 <div class="col-md-12 col-sm-12 text-center">
                     <span class=" user_icon"><i class="fa fa-user-circle"></i></span>
-                    <div class="separator" style="font-size: 24px">HOW COULD WE HELP YOU?</div>
+                    <div class="separator" style="font-size: 24px">INFORMATION FOR COMPANIES</div>
                     <hr style="margin-top: 23px">
-                    <p style="text-align: left; font-size: 20px; margin-left: 15px">Frequently asked questions</p>
+                    <p style="text-align: left; font-size: 20px; margin-left: 15px">Information</p>
                     <hr>
-                    <div class="accordion" id="accordionExample">
-                        <div class="card" style="border: none">
-                            <div class="card-header" id="headingOne">
-                                <h2 class="mb-0">
-                                    <button class="btn btn-link btn-block text-left button_box" type="button" data-toggle="collapse" data-target="#collapseOne" aria-controls="collapseOne">
-						          Question #1
-						       </button>
-                                </h2>
-                            </div>
-                            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-                                <div class="card-body answer_box">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card" style="border: none">
-                            <div class="card-header" id="headingTwo">
-                                <h2 class="mb-0">
-                                    <button class="btn btn-link btn-block text-left collapsed button_box" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-controls="collapseTwo">
-						          Question #2
-						        </button>
-                                </h2>
-                            </div>
-                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                                <div class="card-body answer_box">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card" style="border: none">
-                            <div class="card-header" id="headingThree">
-                                <h2 class="mb-0">
-                                    <button class="btn btn-link btn-block text-left collapsed button_box" type="button" data-toggle="collapse" data-target="#collapseThree" aria-controls="collapseThree">
-						          Question #3
-						        </button>
-                                </h2>
-                            </div>
-                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                                <div class="card-body answer_box">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <hr style="margin-top: 23px">
-                    <p style="text-align: left; font-size: 20px; margin-left: 15px">You can send us a message</p>
-                    <hr>
-                    <form>
-                        <div class="form-group text-left" style="margin-top: 15px">
-                            <label for="exampleFormControlInput1">Email address</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="How can we contact you (write your email)?">
-                        </div>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
                 </div>
-                <div class="form-group" style="margin-left: 14px; margin-right: 14px">
-                    <label for="exampleFormControlTextarea1">Textarea</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Please, write your message here, explain your problem" style="border-radius: 15px !important; border: 1px solid #31A13C !important;"></textarea>
-                </div>
-                <div class="form-row">
-                    <div class="col-md-6 text-left">
-                    </div>
-                    <div class="form-group col-md-6 text-right">
-                        <button type="submit" class="btn btn-primary" style="border-radius: 15px; background-color: #31A13C; padding: 4px; width: 100px; font-size: 20px; margin-right: 14px">SEND</button>
-                    </div>
-                </div>
-                </form>
-
             </div>
         </div>
         <!-- Footer -->
@@ -177,8 +121,6 @@
             </div>
         </footer>
     </div>
-
-
 
     <!--Javascript Links-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
