--- a/my_orders.html
+++ b/my_orders.html
@@ -19,8 +19,8 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" style="border-color: green;">
-	    	<span class="navbar-toggler-icon my-toggler"></span>
-	    </button>
+				<span class="navbar-toggler-icon my-toggler"></span>
+			</button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <a class="navbar-brand mr-auto" href="#"><span class="vastelogo"><i>#vastepiste</i></span></a>
                 <a class="nav-item mr-auto" href="#">
@@ -55,92 +55,117 @@
                         <a class="nav-link" href="customer_servise_help_page.html">Customer Service</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about_us.html">About Us</a>
+                        <a class="nav-link" href="#">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="LogInpage.html">Login</a>
-                        <a class="nav-link" href="#" hidden>Account</a>
+                        <a class="nav-link" href="about_us.html" hidden>Account</a>
                     </li>
                 </ul>
             </div>
         </nav>
-        <!--Registration Form-->
+        <!--Form-->
         <div class="row">
-            <div class="col-md-6 offset-md-3 col-sm-12 main_block">
+            <div class="col-md-1"></div>
+            <div class="col-md-2 account_block text-center">
+                <p class="user_icon" style="font-size: 80px;"><i class="fa fa-user-circle"></i></p>
+                <p class="p_name">Firstname Surname</p>
+                <p class="p_email">customer.email@mail.fi</p>
+                <hr class="hr_account"></hr>
+            </div>
+            <div class="col-md-1"></div>
+            <div class="col-md-6 col-sm-12 main_block" style="height: 840px">
                 <div class="col-md-12 col-sm-12 text-center">
-                    <span class=" user_icon"><i class="fa fa-user-circle"></i></span>
-                    <div class="separator" style="font-size: 24px">CREATE NEW ACCOUNT</div>
-                    <form style="margin-top: 15px">
-                        <div class="form-row text-left">
-                            <div class="form-group col-md-6">
-                                <label for="name">Name:*</label>
-                                <input type="text" class="form-control" id="name" required>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="surname">Surname:*</label>
-                                <input type="text" class="form-control" id="surname" required>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="dob">Date of Birth:</label>
-                                <input type="text" class="form-control" id="dob">
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="phonenum">Phone Number:*</label>
-                                <input type="text" class="form-control" id="phonenum" required>
-                            </div>
-                        </div>
-                        <div class="form-group text-left">
-                            <label for="email">Email:*</label>
-                            <input type="email" class="form-control" id="email" required>
-                        </div>
-                        <div class="form-row text-left">
-                            <div class="form-group col-md-6">
-                                <label for="password">Password:*</label>
-                                <input type="text" class="form-control" id="password" required>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="conf_password">Confirm Password:*</label>
-                                <input type="text" class="form-control" id="conf_password" required>
-                            </div>
-                        </div>
-                        <div class="form-group text-left">
-                            <label for="address">Street Address:</label>
-                            <input type="text" class="form-control" id="address">
-                        </div>
-                        <div class="form-row text-left">
-                            <div class="form-group col-md-6">
-                                <label for="city_town">City / Town:</label>
-                                <input type="text" class="form-control" id="city_town">
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="post_code">Postal Code:</label>
-                                <input type="text" class="form-control" id="post_code">
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group" style="float: left">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="gridCheck" required>
-                                    <label class="form-check-label" for="gridCheck">
-					       <a href="#" class="policy_link">I agree to the Terms of Service and Privacy Policy*</a>
-					      </label>
+                    <div style="font-size: 24px; font-weight: bold; margin-top: 10px;">MY ORDERS</div>
+                    <hr style="margin-top: 10px;"></hr>
+                    <div>
+                        <input type="button" id="active_btn" class="active_completed" value="Active (x)" onclick="show_active()" style="color: black; margin-right: 20%;">
+                        <input type="button" id="completed_btn" class="active_completed" value="Completed (x)" onclick="show_completed()">
+                    </div>
+                    <hr style="margin-top: 10px;"></hr>
+                    <!-- Active Block-->
+                    <div id="active_block">
+                        <div class="orders_block">
+                            <div class="row">
+                                <div class="col-md-6 col-sm-6">
+                                    <p class="delivery_text">Delivery XX.XX.XX </p>
+                                </div>
+                                <div class="col-md-6 col-sm-6">
+                                    <p class="status">Sent</p>
                                 </div>
                             </div>
+                            <hr style="margin-top: -5px;"></hr>
+                            <img src="./images/placeholder.png" class="product_img_orders">
                         </div>
-                        <div class="form-row">
-                            <div class="col-md-6 text-left">
-                                <p>* Required fields</p>
+                        <div class="orders_block">
+                            <div class="row">
+                                <div class="col-md-6 col-sm-6">
+                                    <p class="delivery_text">Delivery XX.XX.XX </p>
+                                </div>
+                                <div class="col-md-6 col-sm-6">
+                                    <p class="status">Sent</p>
+                                </div>
                             </div>
-                            <div class="form-group col-md-6 text-right">
-                                <button type="submit" class="btn btn-primary" style="border-radius: 15px; background-color: #31A13C; padding: 7px; width: 120px; font-size: 20px">CREATE</button>
-                            </div>
+                            <hr style="margin-top: -5px;"></hr>
+                            <img src="./images/placeholder.png" class="product_img_orders">
                         </div>
-                    </form>
+                        <div class="orders_block">
+                            <div class="row">
+                                <div class="col-md-6 col-sm-6">
+                                    <p class="delivery_text">Delivery XX.XX.XX </p>
+                                </div>
+                                <div class="col-md-6 col-sm-6">
+                                    <p class="status">Sent</p>
+                                </div>
+                            </div>
+                            <hr style="margin-top: -5px;"></hr>
+                            <img src="./images/placeholder.png" class="product_img_orders">
+                        </div>
+                    </div>
+                    <!--Completed Block-->
+                    <div id="completed_block">
+                        <div class="orders_block">
+                            <div class="row">
+                                <div class="col-md-6 col-sm-6">
+                                    <p class="delivery_text">Delivery XX.XX.XX </p>
+                                </div>
+                                <div class="col-md-6 col-sm-6">
+                                    <p class="status">Received</p>
+                                </div>
+                            </div>
+                            <hr style="margin-top: -5px;"></hr>
+                            <img src="./images/placeholder.png" class="product_img_orders">
+                        </div>
+                        <div class="orders_block">
+                            <div class="row">
+                                <div class="col-md-6 col-sm-6">
+                                    <p class="delivery_text">Delivery XX.XX.XX </p>
+                                </div>
+                                <div class="col-md-6 col-sm-6">
+                                    <p class="status">Received</p>
+                                </div>
+                            </div>
+                            <hr style="margin-top: -5px;"></hr>
+                            <img src="./images/placeholder.png" class="product_img_orders">
+                        </div>
+                        <div class="orders_block">
+                            <div class="row">
+                                <div class="col-md-6 col-sm-6">
+                                    <p class="delivery_text">Delivery XX.XX.XX </p>
+                                </div>
+                                <div class="col-md-6 col-sm-6">
+                                    <p class="status">Received</p>
+                                </div>
+                            </div>
+                            <hr style="margin-top: -5px;"></hr>
+                            <img src="./images/placeholder.png" class="product_img_orders">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
         <!-- Footer -->
-        <footer class="page-footer font-small pt-4" style="margin-top: 60px; background-color: #312B2B; margin-left: -15px; margin-right: -15px; color: white">
+        <footer class="page-footer font-small pt-4" style="margin-top: 230px; background-color: #312B2B; margin-left: -15px; margin-right: -15px; color: white">
             <div class="container-fluid text-center text-md-left">
                 <div class="row">
                     <div class="col-md-5 mt-md-0 mt-3">
@@ -174,6 +199,27 @@
     </div>
 
     <!--Javascript Links-->
+
+    <script type="text/javascript">
+        function show_active() {
+            document.getElementById("active_block").style.display = 'block';
+            document.getElementById("completed_block").style.display = 'none';
+            document.getElementById("active_btn").style.color = 'black';
+            document.getElementById("completed_btn").style.color = 'gray';
+            document.getElementById("active_btn").style.fontWeight = 'bold';
+            document.getElementById("completed_btn").style.fontWeight = 'normal';
+        }
+
+        function show_completed() {
+            document.getElementById("active_block").style.display = 'none';
+            document.getElementById("completed_block").style.display = 'block';
+            document.getElementById("active_btn").style.color = 'gray';
+            document.getElementById("completed_btn").style.color = 'black';
+            document.getElementById("active_btn").style.fontWeight = 'normal';
+            document.getElementById("completed_btn").style.fontWeight = 'bold';
+
+        }
+    </script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
