--- a/my_orders.html
+++ b/my_orders.html
@@ -93,7 +93,24 @@
                     </div>
                     <hr style="margin-top: 10px;"></hr>
                     <!-- Active Block-->
-                    <div id="active_block">
+                    <div id="active_block" style="height: 750px; overflow-y: scroll; overflow-x: hidden;">
+                        <div class="orders_block">
+                            <div class="row">
+                                <div class="col-md-6 col-sm-6">
+                                    <p class="delivery_text">Delivery XX.XX.XX </p>
+                                </div>
+                                <div class="col-md-6 col-sm-6">
+                                    <p class="status">Sent</p>
+                                </div>
+                            </div>
+                            <hr style="margin-top: -5px;"></hr>
+                            <div class="row">
+											<div class="col-md-4"><img src="./images/placeholder.png" class="product_img_orders"></div>
+											<div class="col-md-4"></div>
+											<div class="col-md-4"></div>
+									 </div>
+                            
+                        </div>
                         <div class="orders_block">
                             <div class="row">
                                 <div class="col-md-6 col-sm-6">
